testsuite/tests/typecheck/should_fail/T22560_fail_b.stderr

T22560_fail_b.hs:6:1: error: [GHC-57916]
    • Invalid invisible type variable binder: @a
      There is no matching forall-bound variable
      in the standalone kind signature for ‘P’.
      NB. Only ‘forall a.’ -quantification matches invisible binders,
          whereas ‘forall {a}.’ and ‘forall a ->’ do not.
    • In the data type declaration for ‘P’
